# QR-Utility

./: CMakeLists.txt  README.md
src/: IMGuiWrapper.cpp  IMGuiWrapper.h  QRCode.cpp  QRCode.h  SDLWrapper.cpp  SDLWrapper.h  main.cpp
test/: QRCodeTest.cpp
